--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- media queris links -->
     <link rel="stylesheet" href="css/queries.css" />
 
-    <title>Frontend Mentor | Todo app</title>
+    <title>MOS | Todo app</title>
   </head>
 
   <body>
